@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-25T02:11:50Z",
+  "timestamp" : "2022-07-25T08:30:50Z",
   "count_outdated" : 692,
   "uniques_outdated" : 359,
-  "count" : 716,
-  "uniques" : 373,
+  "count" : 717,
+  "uniques" : 374,
   "clones" : [
     {
       "timestamp": "2022-07-11T00:00:00Z",
@@ -79,6 +79,13 @@
       "timestamp": "2022-07-24T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
